# EiT_project

./: .gitignore  .gitmodules  Dockerfile  README.md
data_analysis/: activation_func_vis.m  dist_alg_eval.mlx  ico_plot.asv  ico_plot.m  ico_plot.mlx
data_analysis/eval_ico/: eval_ico_1.txt  eval_ico_10.txt  eval_ico_11.txt  eval_ico_12.txt  eval_ico_13.txt  eval_ico_14.txt  eval_ico_15.txt  eval_ico_16.txt  eval_ico_17.txt  eval_ico_18.txt  eval_ico_19.txt  eval_ico_2.txt  eval_ico_20.txt  eval_ico_21.txt  eval_ico_22.txt  eval_ico_23.txt  eval_ico_24.txt  eval_ico_25.txt  eval_ico_26.txt  eval_ico_27.txt  eval_ico_28.txt  eval_ico_29.txt  eval_ico_3.txt  eval_ico_30.txt  eval_ico_4.txt  eval_ico_5.txt  eval_ico_6.txt  eval_ico_7.txt  eval_ico_8.txt  eval_ico_9.txt
data_analysis/eval_ico_airport/: eval_ico_airport.txt
data_analysis/eval_pid_airport/: eval_pid_0.txt
data_analysis/eval_pid_fast/: eval_pid_1.txt  eval_pid_10.txt  eval_pid_11.txt  eval_pid_12.txt  eval_pid_13.txt  eval_pid_14.txt  eval_pid_15.txt  eval_pid_16.txt  eval_pid_17.txt  eval_pid_18.txt  eval_pid_19.txt  eval_pid_2.txt  eval_pid_20.txt  eval_pid_21.txt  eval_pid_22.txt  eval_pid_23.txt  eval_pid_24.txt  eval_pid_25.txt  eval_pid_26.txt  eval_pid_27.txt  eval_pid_28.txt  eval_pid_29.txt  eval_pid_3.txt  eval_pid_30.txt  eval_pid_4.txt  eval_pid_5.txt  eval_pid_6.txt  eval_pid_7.txt  eval_pid_8.txt  eval_pid_9.txt
data_analysis/eval_pid_slow/: eval_pid_1.txt  eval_pid_10.txt  eval_pid_11.txt  eval_pid_12.txt  eval_pid_13.txt  eval_pid_14.txt  eval_pid_15.txt  eval_pid_16.txt  eval_pid_17.txt  eval_pid_18.txt  eval_pid_19.txt  eval_pid_2.txt  eval_pid_20.txt  eval_pid_21.txt  eval_pid_22.txt  eval_pid_23.txt  eval_pid_24.txt  eval_pid_25.txt  eval_pid_26.txt  eval_pid_27.txt  eval_pid_28.txt  eval_pid_29.txt  eval_pid_3.txt  eval_pid_30.txt  eval_pid_4.txt  eval_pid_5.txt  eval_pid_6.txt  eval_pid_7.txt  eval_pid_8.txt  eval_pid_9.txt
dist_ransac/: CMakeLists.txt  README.txt  package.xml
dist_ransac/msg/: Polar_dist.msg
dist_ransac/scripts/: ransac_sub.py
docker/: README.md
docker/frobit/: docker-compose.yml
docker/ros-fence-inspection/: Dockerfile  README.md  builder.sh
docker/ros-frobit-kinematics/: Dockerfile  builder.sh
nodes/: README.md  ROS_RANSAC_PID  detection  ico_fence_following
nodes/camera_control/: CMakeLists.txt  package.xml
nodes/camera_control/include/camera_control/: camera_control.hpp  image_save.hpp
nodes/camera_control/launch/: husky.launch
nodes/camera_control/src/: camera_control.cpp  camera_control_node.cpp  image_save.cpp
nodes/gps_control/: CMakeLists.txt  package.xml
nodes/gps_control/include/gps_control/: gps_control.hpp
nodes/gps_control/src/: gps_control.cpp  gps_control_node.cpp
simulation/: README.md
vision/: README.md  plots_for_report.ipynb
(+1055 files in other folders)
