<?xml version="1.0"?>
<package format="2">
  <name>camera_control</name>
  <version>0.1.0</version>
  <description>The camera control package</description>
  <maintainer email="milar16@student.sdu.dk">Mikkel Larsen</maintainer>
  <license>BSD</license>
  <author email="milar16@student.sdu.dk">Mikkel Larsen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rosconsole</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_basics</depend>
  <depend>gps_control</depend>


</package>
