<?xml version="1.0"?>
<package format="2">
  <name>gps_control</name>
  <version>0.1.0</version>
  <description>The gps control package</description>
  <maintainer email="milar16@student.sdu.dk">Mikkel Larsen</maintainer>
  <license>BSD</license>
  <author email="milar16@student.sdu.dk">Mikkel Larsen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
